# SPDX-FileCopyrightText: Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "ak09916"
version = "0.1.0"
edition = "2021"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
rust-version = "1.74"
description = "AKM AK09916 3-axis magnetometer driver"
homepage = "https://github.com/Gekkio/ak09916"
repository = "https://github.com/Gekkio/ak09916"
license = "MIT OR Apache-2.0"
keywords = ["AK09916", "magnetometer", "driver", "i2c"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
bitflags = "2.4.1"
defmt = "0.3.5"
embedded-hal = "1.0.0-rc.2"
embedded-hal-async = "1.0.0-rc.2"
num_enum = { version = "0.7.1", default-features = false }
