# SPDX-FileCopyrightText: Joonas Javanainen <joonas@merulogic.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "ak09916"
version = "0.1.0"
edition = "2021"
authors = ["Joonas Javanainen <joonas@merulogic.com>"]
rust-version = "1.75"
description = "AKM AK09916 3-axis magnetometer driver"
homepage = "https://github.com/merulogic/ak09916"
repository = "https://github.com/merulogic/ak09916"
license = "MIT OR Apache-2.0"
keywords = ["AK09916", "magnetometer", "driver", "i2c"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
defmt-03 = ["dep:defmt-03"]

[dependencies]
bitflags = "2.9"
defmt-03 = { package = "defmt", version = "0.3", optional = true }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
num_enum = { version = "0.7", default-features = false }

[dev-dependencies]
defmt-03 = { package = "defmt", version = "0.3" }
